# CodeExamples

./: CMakeLists.txt  Dockerfile
proto/: .gitignore
src/: TestObjectClass.cpp  TestObjectClass.h  main.cpp
